# emeocv

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  ImageInput.cpp  ImageInput.h  ImageProcessor.cpp  ImageProcessor.h  KNearestOcr.cpp  Makefile  MySQLDatabase.cpp  MySQLDatabase.h  Plausi.cpp  README.md  adjust  capture  config.yml  create_mysql.sh  main.cpp
